updated link to updated main page

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <div class="menu">
 <div class="nav">
 	<ul>
-		<li><a href="C:\Users\Lindberg\Desktop\Coding\Lakers\Lakers Site\index.html">Enter Site</a>
+		<li><a href="C:\Users\Lindberg\Desktop\Coding\Lakers\LakersMainPage\index.html">Enter Site</a>
 	</ul>
 
 </ul>
