--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="icon" href="images/Lakers1.jpg">
 <title>Lakers Front Page</title>
 </head>
 
