changed the favicon

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
-<link rel="icon" href="images/Lakers1.jpg">
+<link rel="icon" href="images/logo1.png">
 <title>Lakers Front Page</title>
 </head>
 
